--- a/Week02/HW-02.ipynb
+++ b/Week02/HW-02.ipynb
@@ -23,7 +23,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63c4cfeb-dd92-4566-fd36-969a31a40dec"
+        "outputId": "b01e016b-1afa-4dfc-a57d-9a22a2ff48ae"
       },
       "outputs": [
         {
@@ -106,7 +106,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba7b35a1-92a6-4dd8-ef83-192c71b92a25"
+        "outputId": "25aa32cf-5842-480a-96c3-5cada8889c02"
       },
       "outputs": [
         {
@@ -149,7 +149,7 @@
           "height": 1000
         },
         "id": "acBGGQH_0E95",
-        "outputId": "f2b037dd-df60-4e09-d739-438329814a40"
+        "outputId": "3a2cb0fd-def4-49e3-89aa-274e0a212b66"
       },
       "execution_count": 3,
       "outputs": [
@@ -213,7 +213,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e4836e02-66c1-4de8-9eae-3dad48c93739\">\n",
+              "  <div id=\"df-3608310d-0766-4b75-81d1-a149d5a25a82\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -465,7 +465,7 @@
               "</table>\n",
               "<p>558837 rows × 16 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e4836e02-66c1-4de8-9eae-3dad48c93739')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3608310d-0766-4b75-81d1-a149d5a25a82')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -516,12 +516,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e4836e02-66c1-4de8-9eae-3dad48c93739 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3608310d-0766-4b75-81d1-a149d5a25a82 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e4836e02-66c1-4de8-9eae-3dad48c93739');\n",
+              "          const element = document.querySelector('#df-3608310d-0766-4b75-81d1-a149d5a25a82');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -629,7 +629,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2G0dNEykTzhI",
-        "outputId": "9ac65d4f-10ba-422c-ebba-71497581accf"
+        "outputId": "115fbd94-ae9b-4790-9bbf-d2bcc970c72b"
       },
       "execution_count": 5,
       "outputs": [
@@ -637,73 +637,73 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['fiat',\n",
-              " 'smart',\n",
-              " 'ford tk',\n",
-              " 'mercedes',\n",
-              " 'rolls-royce',\n",
+              "['gmc',\n",
               " 'jeep',\n",
-              " 'bentley',\n",
-              " 'chev truck',\n",
-              " 'audi',\n",
-              " 'saturn',\n",
-              " 'hyundai',\n",
-              " 'mazda tk',\n",
-              " 'chrysler',\n",
-              " 'daewoo',\n",
-              " 'infiniti',\n",
-              " 'mercedes-benz',\n",
-              " 'lincoln',\n",
-              " 'honda',\n",
-              " 'hummer',\n",
-              " 'geo',\n",
-              " 'volvo',\n",
-              " 'plymouth',\n",
-              " 'aston martin',\n",
-              " 'pontiac',\n",
-              " 'subaru',\n",
-              " 'bmw',\n",
-              " 'jaguar',\n",
-              " 'nan',\n",
-              " 'fisker',\n",
-              " 'ford truck',\n",
-              " 'saab',\n",
-              " 'lexus',\n",
-              " 'kia',\n",
-              " 'dodge tk',\n",
-              " 'dot',\n",
-              " 'ram',\n",
-              " 'chevrolet',\n",
-              " 'acura',\n",
-              " 'porsche',\n",
-              " 'lamborghini',\n",
-              " 'tesla',\n",
-              " 'landrover',\n",
               " 'nissan',\n",
-              " 'mazda',\n",
               " 'hyundai tk',\n",
               " 'mini',\n",
-              " 'mercury',\n",
-              " 'ford',\n",
-              " 'volkswagen',\n",
-              " 'dodge',\n",
-              " 'suzuki',\n",
-              " 'maserati',\n",
-              " 'toyota',\n",
-              " 'oldsmobile',\n",
-              " 'cadillac',\n",
-              " 'lotus',\n",
-              " 'gmc truck',\n",
-              " 'ferrari',\n",
-              " 'land rover',\n",
-              " 'mitsubishi',\n",
-              " 'buick',\n",
-              " 'isuzu',\n",
-              " 'mercedes-b',\n",
-              " 'gmc',\n",
               " 'vw',\n",
+              " 'ford truck',\n",
+              " 'maserati',\n",
+              " 'bentley',\n",
+              " 'cadillac',\n",
+              " 'dodge',\n",
+              " 'mitsubishi',\n",
+              " 'landrover',\n",
+              " 'land rover',\n",
+              " 'kia',\n",
+              " 'toyota',\n",
+              " 'pontiac',\n",
+              " 'daewoo',\n",
+              " 'fisker',\n",
+              " 'lincoln',\n",
+              " 'scion',\n",
+              " 'mazda tk',\n",
+              " 'dot',\n",
+              " 'ferrari',\n",
+              " 'hummer',\n",
+              " 'chrysler',\n",
+              " 'ford',\n",
+              " 'chev truck',\n",
+              " 'buick',\n",
+              " 'subaru',\n",
+              " 'gmc truck',\n",
+              " 'saturn',\n",
+              " 'mercedes-b',\n",
+              " 'lexus',\n",
+              " 'nan',\n",
+              " 'aston martin',\n",
+              " 'lamborghini',\n",
+              " 'chevrolet',\n",
+              " 'mercedes',\n",
+              " 'hyundai',\n",
+              " 'suzuki',\n",
+              " 'ram',\n",
+              " 'smart',\n",
+              " 'infiniti',\n",
+              " 'fiat',\n",
+              " 'saab',\n",
+              " 'bmw',\n",
+              " 'porsche',\n",
+              " 'ford tk',\n",
+              " 'acura',\n",
+              " 'audi',\n",
+              " 'dodge tk',\n",
               " 'airstream',\n",
-              " 'scion']"
+              " 'lotus',\n",
+              " 'volvo',\n",
+              " 'mercury',\n",
+              " 'honda',\n",
+              " 'geo',\n",
+              " 'plymouth',\n",
+              " 'mazda',\n",
+              " 'volkswagen',\n",
+              " 'rolls-royce',\n",
+              " 'jaguar',\n",
+              " 'isuzu',\n",
+              " 'tesla',\n",
+              " 'mercedes-benz',\n",
+              " 'oldsmobile']"
             ]
           },
           "metadata": {},
@@ -741,7 +741,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a038c87-a8bb-4ae6-a857-58ae9eaeff5c"
+        "outputId": "63b7ffdb-1714-437c-9fd0-a2d5405fc2a1"
       },
       "outputs": [
         {
@@ -762,32 +762,27 @@
       "source": [
         "price_ranges = [(0, 10000), (0, 20000), (0, 30000), (0, 40000), (0, 50000), (0, 60000), (0, 70000), (0, 80000), (0, 90000), (0, 100000), (0, 110000), (0, 120000), (0, 130000), (0, 140000), (0, 150000), (0, 160000), (0, 170000), (0, 180000), (0, 190000), (0, 200000), (0, 210000), (0, 220000), (0, 230000)]\n",
         "\n",
-        "X = []\n",
-        "Y = []\n",
-        "print('correlation for each selling price window')\n",
+        "A = []\n",
+        "B = []\n",
+        "\n",
         "\n",
         "for price_range in price_ranges:\n",
         "    start, end = price_range\n",
         "    group_df = df[df[\"sellingprice\"].between(start, end, inclusive = 'both')]\n",
         "    corr = group_df['mmr'].corr(group_df['sellingprice'])\n",
-        "    X.append(end)\n",
-        "    Y.append(corr)\n",
-        "    print(f'{start} - {end} is {corr}')\n",
+        "    A.append(end)\n",
+        "    B.append(corr)\n",
+        "    print('correlation for ' f'{start} - {end} window is {corr}')\n",
         "\n",
         "\n",
-        "\n",
-        "correlation_dict = {}\n",
-        "for price_range, corr in correlation_dict.items():\n",
-        "    start, end = price_range.left, price_range.right\n",
-        "    X.append(f'{start} - {end}')\n",
-        "    Y.append(corr)\n"
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XKoeH9jdOFft",
-        "outputId": "208c59d6-4134-4a3a-c21f-8c03da7bb0c1"
+        "outputId": "b768ddba-d25b-4f6d-c204-eb0689e2f6b8"
       },
       "execution_count": 7,
       "outputs": [
@@ -795,30 +790,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "correlation for each selling price window\n",
-            "0 - 10000 is 0.8743542721249598\n",
-            "0 - 20000 is 0.9584428323123231\n",
-            "0 - 30000 is 0.9744203460442981\n",
-            "0 - 40000 is 0.9791682459086493\n",
-            "0 - 50000 is 0.9812713466602431\n",
-            "0 - 60000 is 0.9822401960311057\n",
-            "0 - 70000 is 0.982708264353825\n",
-            "0 - 80000 is 0.983186257681986\n",
-            "0 - 90000 is 0.9834269274590383\n",
-            "0 - 100000 is 0.9835761128330059\n",
-            "0 - 110000 is 0.9835897120182319\n",
-            "0 - 120000 is 0.9836722973053684\n",
-            "0 - 130000 is 0.9837452115182911\n",
-            "0 - 140000 is 0.9838139061890904\n",
-            "0 - 150000 is 0.9838873814578466\n",
-            "0 - 160000 is 0.9839572313793203\n",
-            "0 - 170000 is 0.9840077311787884\n",
-            "0 - 180000 is 0.9840226043763775\n",
-            "0 - 190000 is 0.9840312414363551\n",
-            "0 - 200000 is 0.9840312414363551\n",
-            "0 - 210000 is 0.9840312414363551\n",
-            "0 - 220000 is 0.9840312414363551\n",
-            "0 - 230000 is 0.9836337168977266\n"
+            "correlation for 0 - 10000 window is 0.8743542721249598\n",
+            "correlation for 0 - 20000 window is 0.9584428323123231\n",
+            "correlation for 0 - 30000 window is 0.9744203460442981\n",
+            "correlation for 0 - 40000 window is 0.9791682459086493\n",
+            "correlation for 0 - 50000 window is 0.9812713466602431\n",
+            "correlation for 0 - 60000 window is 0.9822401960311057\n",
+            "correlation for 0 - 70000 window is 0.982708264353825\n",
+            "correlation for 0 - 80000 window is 0.983186257681986\n",
+            "correlation for 0 - 90000 window is 0.9834269274590383\n",
+            "correlation for 0 - 100000 window is 0.9835761128330059\n",
+            "correlation for 0 - 110000 window is 0.9835897120182319\n",
+            "correlation for 0 - 120000 window is 0.9836722973053684\n",
+            "correlation for 0 - 130000 window is 0.9837452115182911\n",
+            "correlation for 0 - 140000 window is 0.9838139061890904\n",
+            "correlation for 0 - 150000 window is 0.9838873814578466\n",
+            "correlation for 0 - 160000 window is 0.9839572313793203\n",
+            "correlation for 0 - 170000 window is 0.9840077311787884\n",
+            "correlation for 0 - 180000 window is 0.9840226043763775\n",
+            "correlation for 0 - 190000 window is 0.9840312414363551\n",
+            "correlation for 0 - 200000 window is 0.9840312414363551\n",
+            "correlation for 0 - 210000 window is 0.9840312414363551\n",
+            "correlation for 0 - 220000 window is 0.9840312414363551\n",
+            "correlation for 0 - 230000 window is 0.9836337168977266\n"
           ]
         }
       ]
@@ -840,7 +834,7 @@
           "height": 621
         },
         "id": "_kTGuN1FMx5a",
-        "outputId": "93d09cfb-9658-49fa-ce5f-5ed1c8875445"
+        "outputId": "d4f64c2a-5b5b-4dbe-900c-85649bd68b8a"
       },
       "execution_count": 8,
       "outputs": [
@@ -864,7 +858,7 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "plt.figure(figsize=(20, 10))\n",
-        "plt.plot(X, Y)\n",
+        "plt.plot(A, B)\n",
         "plt.xlabel(\"Price Range\")\n",
         "plt.ylabel(\"Correlation\")\n",
         "plt.xticks(np.arange(0, 230000, 10000))\n",
@@ -877,7 +871,7 @@
           "height": 621
         },
         "id": "f7qd61qSM4FD",
-        "outputId": "51e0b235-b9b7-489e-b14c-e8e0a24e446d"
+        "outputId": "d4a84a46-01e1-4702-bc71-04997be0b12d"
       },
       "execution_count": 9,
       "outputs": [
@@ -927,7 +921,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5130e1a6-680e-41b0-a79c-b9f856752f61"
+        "outputId": "aff99972-9605-4908-f7b1-58ff0251ca7b"
       },
       "outputs": [
         {
@@ -1009,7 +1003,7 @@
           "height": 704
         },
         "id": "nGbrfiu7c57-",
-        "outputId": "47e9568e-71e2-414b-f0c6-60dbc4769001"
+        "outputId": "e20a43fe-f74c-4cff-e207-3f027607cf75"
       },
       "execution_count": 13,
       "outputs": [
@@ -1073,7 +1067,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d1fb22d2-f426-48d3-82cc-2bec0268278d\">\n",
+              "  <div id=\"df-8560b9a6-40bd-4c8a-96d8-835c86351ce0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1325,7 +1319,7 @@
               "</table>\n",
               "<p>6746 rows × 16 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d1fb22d2-f426-48d3-82cc-2bec0268278d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8560b9a6-40bd-4c8a-96d8-835c86351ce0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1376,12 +1370,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d1fb22d2-f426-48d3-82cc-2bec0268278d button.colab-df-convert');\n",
+              "          document.querySelector('#df-8560b9a6-40bd-4c8a-96d8-835c86351ce0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d1fb22d2-f426-48d3-82cc-2bec0268278d');\n",
+              "          const element = document.querySelector('#df-8560b9a6-40bd-4c8a-96d8-835c86351ce0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1428,7 +1422,7 @@
           "height": 930
         },
         "id": "UgjnUuMnvqvg",
-        "outputId": "4b8810cc-d2e5-4696-a41d-c18e0cce97bf"
+        "outputId": "8332ebcc-ebc6-41e7-89ff-8c452394d4ce"
       },
       "execution_count": 14,
       "outputs": [
