--- a/Week02/HW-02.ipynb
+++ b/Week02/HW-02.ipynb
@@ -769,6 +769,7 @@
         "for price_range in price_ranges:\n",
         "    start, end = price_range\n",
         "    group_df = df[df[\"sellingprice\"].between(start, end, inclusive = 'both')]\n",
+        "#Refrence: https://pandas.pydata.org/docs/reference/api/pandas.Series.between.html\n",
         "    corr = group_df['mmr'].corr(group_df['sellingprice'])\n",
         "    A.append(end)\n",
         "    B.append(corr)\n",
@@ -983,6 +984,8 @@
         "df_3 = df['year']>=2015\n",
         "\n",
         "final_df = df[(df_1) & ((df_2) &(df_3))]\n",
+        "\n",
+        "#Reference: https://stackoverflow.com/questions/29370057/select-dataframe-rows-between-two-dates\n",
         "\n",
         "# Just finding 10 most common make for cars made between 2010-2015"
       ],
