--- a/Week04/HW-04.ipynb
+++ b/Week04/HW-04.ipynb
@@ -16,7 +16,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "Lg2f3SkU36BB",
-        "outputId": "86ed432d-6ad3-4bac-cec6-06df53d09ee2",
+        "outputId": "1744244a-d336-41aa-cd81-e2b94b13d980",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -55,7 +55,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "f6zaGQL336BD",
-        "outputId": "41d916de-5ae0-4f4a-8888-2851dc56ee15",
+        "outputId": "3d4bfd75-cd0a-4cec-cefa-5124cfa9f0b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULNJQ7WG6DYI",
-        "outputId": "1dc747a9-c4e8-4b89-ace7-5daea438996d"
+        "outputId": "78ccda11-ef9c-4bb1-de9b-1af26e02cc0c"
       },
       "execution_count": 3,
       "outputs": [
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vVrsvoW77uQD",
-        "outputId": "0ecc7f3d-cf33-46a8-848f-5ec6eca1f5f0"
+        "outputId": "392ba7b4-509f-4f0b-be3b-80763a316207"
       },
       "execution_count": 5,
       "outputs": [
@@ -261,7 +261,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hl4LeVSIcCB5",
-        "outputId": "bc39c466-e87c-483a-b704-b05e8c77a7e1"
+        "outputId": "6a0db7cd-e129-4c94-b7e6-e011b24e63c6"
       },
       "execution_count": 8,
       "outputs": [
@@ -282,6 +282,56 @@
             "                                                  OneHotEncoder(drop='first',\n",
             "                                                                handle_unknown='ignore'))]),\n",
             "                                 ['make', 'transmission', 'state'])])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.sparse import csr_matrix"
+      ],
+      "metadata": {
+        "id": "ujj6iuM20Y5x"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "processing_pipeline.fit(X)\n",
+        "sparse_matrix = processing_pipeline.transform(X)[:, 2]\n",
+        "df = pd.DataFrame.sparse.from_spmatrix(sparse_matrix)\n",
+        "\n",
+        "#Reference: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sparse.from_spmatrix.html"
+      ],
+      "metadata": {
+        "id": "O0PpMoV703Aq"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_null_count = df.isnull().sum().sum()\n",
+        "print(\"Missing values:\",total_null_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X7VT18Lu04U_",
+        "outputId": "84fd007b-b12b-4ea1-b632-0e619baaa7d6"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Missing values: 0\n"
           ]
         }
       ]
@@ -311,9 +361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RLdm-RiRcQR5",
-        "outputId": "6e355ce5-0977-4a8f-a142-5daecb25957e"
+        "outputId": "7b628a51-4c6f-40fd-dfe8-bef80e2e1c0d"
       },
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +389,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 19
         }
       ]
     },
@@ -351,7 +401,7 @@
       "metadata": {
         "id": "DWmi51lE9s5u"
       },
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -366,9 +416,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4luJs5m3-Qsc",
-        "outputId": "7369c164-c09d-4b6b-a464-9f700a033680"
+        "outputId": "db656282-f86d-41fb-8c22-cc4956ad0d4e"
       },
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 21
         }
       ]
     },
@@ -407,9 +457,9 @@
           "height": 279
         },
         "id": "fvO3Gbrb-gQ8",
-        "outputId": "2622d51e-77c0-4eae-b4c8-83fdb2c09b80"
+        "outputId": "cc501333-1b51-4f23-fb9b-d2f5960c51f3"
       },
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -445,13 +495,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 23,
       "metadata": {
         "id": "RJ2WXDVo36BG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d091accd-6dca-4135-b059-9ab521859de4"
+        "outputId": "d54efc4f-e9e2-4f0c-a4a3-b42983604d94"
       },
       "outputs": [
         {
@@ -478,7 +528,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 23
         }
       ],
       "source": [
@@ -498,7 +548,7 @@
       "metadata": {
         "id": "ZeGIGH9AdW5O"
       },
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -513,9 +563,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6c_W3zMVdeZo",
-        "outputId": "161f074f-25cb-4b44-fb60-e0aa98b864b1"
+        "outputId": "57d3e401-898f-4c55-8f97-0258d5b7140e"
       },
-      "execution_count": 15,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 25
         }
       ]
     },
