--- a/Week04/HW-04.ipynb
+++ b/Week04/HW-04.ipynb
@@ -13,10 +13,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "Lg2f3SkU36BB",
-        "outputId": "1744244a-d336-41aa-cd81-e2b94b13d980",
+        "outputId": "18e0599b-6ba3-4f7a-d1fa-65768fe5883b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,10 +52,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "f6zaGQL336BD",
-        "outputId": "3d4bfd75-cd0a-4cec-cefa-5124cfa9f0b2",
+        "outputId": "7a8f643c-a70a-4418-9c72-183c5b34c143",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -112,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULNJQ7WG6DYI",
-        "outputId": "78ccda11-ef9c-4bb1-de9b-1af26e02cc0c"
+        "outputId": "0a8151bb-ae3b-481f-f584-4c11199c5d35"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "QKDfH73C6-fS"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vVrsvoW77uQD",
-        "outputId": "392ba7b4-509f-4f0b-be3b-80763a316207"
+        "outputId": "2ae620ac-edac-46bb-d0a8-cb7543c2c4d0"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "v5dPd9Xm8-ga"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "fEDUgAOF36BF"
       },
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hl4LeVSIcCB5",
-        "outputId": "6a0db7cd-e129-4c94-b7e6-e011b24e63c6"
+        "outputId": "05ee0fd2-4c80-4038-99d6-88017e1ed81c"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
       "metadata": {
         "id": "O0PpMoV703Aq"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -323,15 +323,44 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7VT18Lu04U_",
-        "outputId": "84fd007b-b12b-4ea1-b632-0e619baaa7d6"
+        "outputId": "833391c0-5dd7-4775-c291-b976bad15c0a"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Missing values: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train_cattransformed = processing_pipeline.fit_transform(X_train)\n",
+        "\n",
+        "\n",
+        "print(f\"No of columns that contains transformed data is {X_train_cattransformed.shape[1]}\")\n",
+        "\n",
+        "print(f\"The datatype of the training dataset is {X_train_cattransformed.dtype}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VMhR71kg4XRH",
+        "outputId": "420428a1-c463-4a9f-ea30-dac6a96f8f3b"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No of columns that contains transformed data is 44\n",
+            "The datatype of the training dataset is float64\n"
           ]
         }
       ]
@@ -361,9 +390,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RLdm-RiRcQR5",
-        "outputId": "7b628a51-4c6f-40fd-dfe8-bef80e2e1c0d"
+        "outputId": "e8e51961-3de3-4e04-ee68-bca9eea5b0e9"
       },
-      "execution_count": 19,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +418,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 14
         }
       ]
     },
@@ -401,7 +430,7 @@
       "metadata": {
         "id": "DWmi51lE9s5u"
       },
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -416,9 +445,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4luJs5m3-Qsc",
-        "outputId": "db656282-f86d-41fb-8c22-cc4956ad0d4e"
+        "outputId": "41d43a81-6dfd-406d-988f-ef47ee6ebdb1"
       },
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +457,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 16
         }
       ]
     },
@@ -457,9 +486,9 @@
           "height": 279
         },
         "id": "fvO3Gbrb-gQ8",
-        "outputId": "cc501333-1b51-4f23-fb9b-d2f5960c51f3"
+        "outputId": "7038388a-3657-40fa-d06e-a447c99540bc"
       },
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -495,13 +524,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 18,
       "metadata": {
         "id": "RJ2WXDVo36BG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d54efc4f-e9e2-4f0c-a4a3-b42983604d94"
+        "outputId": "631dbd80-6a7e-43ec-8790-45c7725afe0e"
       },
       "outputs": [
         {
@@ -528,7 +557,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 18
         }
       ],
       "source": [
@@ -548,7 +577,7 @@
       "metadata": {
         "id": "ZeGIGH9AdW5O"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -563,9 +592,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6c_W3zMVdeZo",
-        "outputId": "57d3e401-898f-4c55-8f97-0258d5b7140e"
+        "outputId": "0b3ecd45-5414-420d-bce1-fbc4b085c250"
       },
-      "execution_count": 25,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +604,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 20
         }
       ]
     },
